lifeguard-derive/tests/ui/compile_error_composite_unique_skipped_field.stderr
error[E0000]: Column 'cached_value' in composite_unique does not exist on this struct. Available columns: id, tenant_id, user_id
 --> $DIR/compile_error_composite_unique_skipped_field.rs:7:1
  |
7 | #[composite_unique = "tenant_id, cached_value, user_id"]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: This error indicates that a composite unique constraint is trying to reference a column that doesn't exist on the struct.
  = note: Only columns that exist on this struct can be used in composite unique constraints.
  = note: Fields marked with #[skip] or #[ignore] are not database columns and cannot be used in constraints.
